40. Create sample regression models

--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -41,11 +41,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KElm3GAhPX_A",
-        "outputId": "1b2195fc-5f67-4054-8cab-2651da106f78",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KElm3GAhPX_A",
+        "outputId": "1b2195fc-5f67-4054-8cab-2651da106f78"
       },
       "source": [
         "# Import TensorFlow\n",
@@ -75,12 +75,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "palYGAp3QDlp",
-        "outputId": "7d96b4e8-0d66-4c77-f60c-64c24f7703c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "id": "palYGAp3QDlp",
+        "outputId": "7d96b4e8-0d66-4c77-f60c-64c24f7703c6"
       },
       "source": [
         "import numpy as np\n",
@@ -127,11 +127,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0n77S3SyQfcu",
-        "outputId": "d3cce3f1-adbc-4e4a-cca0-0e01462392d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0n77S3SyQfcu",
+        "outputId": "d3cce3f1-adbc-4e4a-cca0-0e01462392d6"
       },
       "source": [
         "y == X + 10"
@@ -164,7 +164,155 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "en5nQIj6Q1t5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "en5nQIj6Q1t5",
+        "outputId": "c99c85d4-44c9-4e70-e177-d1ee7748caf5"
+      },
+      "source": [
+        "# Create a demo tensor for our housing price prediction problem\n",
+        "house_info = tf.constant([\"bedroom\", \"bathroom\", \"garage\"])\n",
+        "\n",
+        "house_price = tf.constant([939700])\n",
+        "\n",
+        "house_info, house_price"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(3,), dtype=string, numpy=array([b'bedroom', b'bathroom', b'garage'], dtype=object)>,\n",
+              " <tf.Tensor: shape=(1,), dtype=int32, numpy=array([939700], dtype=int32)>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FRZIOPqISpWA",
+        "outputId": "1fb662ab-2533-4714-f827-013f14936085"
+      },
+      "source": [
+        "X[0], y[0]"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(-7.0, 3.0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n5ewR7eZSr79",
+        "outputId": "a699ad5b-b2f3-4488-993d-2c77fd7bb66e"
+      },
+      "source": [
+        "X[1], y[1]"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(-4.0, 6.0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hou4lJJxSQr3",
+        "outputId": "f6d5911a-dcef-4b7d-f708-f54c968653d5"
+      },
+      "source": [
+        "input_shape = X[0].shape\n",
+        "output_shape = y[0].shape\n",
+        "input_shape, output_shape"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((), ())"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HjBvo25yS08J",
+        "outputId": "f20d1585-3117-4195-b702-a1977239cba3"
+      },
+      "source": [
+        "X[0].ndim"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rhwuEl7aS-eu"
       },
       "source": [
         ""
