42. Steps in improving a model with TensorFlow part 1

--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -312,11 +312,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xC64JdcFZ1AL",
-        "outputId": "686c317c-bca0-498f-8f59-5169546a066a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xC64JdcFZ1AL",
+        "outputId": "686c317c-bca0-498f-8f59-5169546a066a"
       },
       "source": [
         "# Turn our NumPy arrays into tensors\n",
@@ -346,12 +346,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oSkYTKH0aFzR",
-        "outputId": "376f442f-dd17-4bd7-8bb7-8640f82e6060",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "id": "oSkYTKH0aFzR",
+        "outputId": "376f442f-dd17-4bd7-8bb7-8640f82e6060"
       },
       "source": [
         "plt.scatter(X, y)"
@@ -401,11 +401,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RmgWcFcHcKmq",
-        "outputId": "17e6c0b4-bb8b-4319-b921-b6614fa75496",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RmgWcFcHcKmq",
+        "outputId": "17e6c0b4-bb8b-4319-b921-b6614fa75496"
       },
       "source": [
         "# Set random seed\n",
@@ -461,11 +461,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R-YJdIrmK_jr",
-        "outputId": "2b49e86b-1298-42da-b31f-a2b84824a4e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R-YJdIrmK_jr",
+        "outputId": "2b49e86b-1298-42da-b31f-a2b84824a4e3"
       },
       "source": [
         "#Check out X and y\n",
@@ -491,11 +491,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kqrYvp-HLDwB",
-        "outputId": "7e097567-3e1a-42e0-f01f-faea7fe4e56c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kqrYvp-HLDwB",
+        "outputId": "7e097567-3e1a-42e0-f01f-faea7fe4e56c"
       },
       "source": [
         "# Try and make a prediction using our model\n",
@@ -521,11 +521,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g3SprehHLa9T",
-        "outputId": "570b40ed-c660-4d8e-c97c-105048a2638c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g3SprehHLa9T",
+        "outputId": "570b40ed-c660-4d8e-c97c-105048a2638c"
       },
       "source": [
         "y_pred + 11"
@@ -552,7 +552,13 @@
         "id": "cTXsg_ZyLgu1"
       },
       "source": [
-        "##Improving our Model"
+        "##Improving our Model\n",
+        "\n",
+        "we can improve our model, by altering the steps we took to create a model.\n",
+        "\n",
+        "1. **Creating a model** - here we might add more layers, increase the number of hidden units( all called neurons) within each of the hidden layers, change the activation function of each layer.\n",
+        "2. **Compiling a model** - here we might change the optimization function or perhaps the **learning rate** of the optimization function.\n",
+        "3. **Fitting a model** - here we might fit a model for more **epochs** (leave it training for longer) or on more data(give the model more examples to learn from )\n"
       ]
     },
     {
