50. Evaluating a TensorFlow model part 6 (common regression evaluation metrics) Up next

--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -1557,7 +1557,7 @@
         "              optimizer = tf.keras.optimizers.SGD(),\n",
         "              metrics=[\"mae\"])\n"
       ],
-      "execution_count": 30,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -1567,14 +1567,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "busMkSlnUl6I",
-        "outputId": "1a20f39c-a462-4068-9eda-aca736624acf"
+        "outputId": "5a31c6b6-bbe8-4f92-edd8-63fad8623c64"
       },
       "source": [
         "#Show the layers it contains, \n",
         "#Dense  - fully connected layer\n",
         "model.summary()"
       ],
-      "execution_count": 31,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -1621,25 +1621,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rOCBsRaRnaiK",
-        "outputId": "2959fce8-5f51-4d5f-d0ba-187c7a10f7ef"
+        "outputId": "89ca5d36-3260-4726-9c96-ae55a851c340"
       },
       "source": [
         "#Let's fit our model to the training data\n",
         "model.fit(X_train, y_train, epochs=100, verbose=0)"
       ],
-      "execution_count": 32,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fbea7fcce50>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fbea6138590>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 59
         }
       ]
     },
@@ -1650,13 +1650,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-0gYE5kXqRqA",
-        "outputId": "d1029076-a432-4276-e87c-83a2c06d19b1"
+        "outputId": "692a36d8-2b38-45d3-9eed-bf5cf39e842e"
       },
       "source": [
         "#Get a summary of our model\n",
         "model.summary()"
       ],
-      "execution_count": 33,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -1686,14 +1686,14 @@
           "height": 312
         },
         "id": "VpyR8ygyq9me",
-        "outputId": "85b245c7-4d7a-4715-d5d8-674af0f33494"
+        "outputId": "efcc5ddf-4e4e-419f-9119-7a36a9069af0"
       },
       "source": [
         "from tensorflow.keras.utils import plot_model\n",
         "\n",
         "plot_model(model=model, show_shapes=True)"
       ],
-      "execution_count": 34,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1706,7 +1706,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 50
         }
       ]
     },
@@ -1725,11 +1725,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8__q9MCs-wbH",
-        "outputId": "56264445-40a0-4735-d184-668780dd7e38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8__q9MCs-wbH",
+        "outputId": "bea28ed9-b410-4a85-a636-68b06f284d07"
       },
       "source": [
         "# Make some predictions\n",
@@ -1737,8 +1737,15 @@
         "\n",
         "y_pred"
       ],
-      "execution_count": 36,
+      "execution_count": 61,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:6 out of the last 7 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7fbe960814d0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1758,23 +1765,23 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 61
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Upbp3z_Z_Anb",
-        "outputId": "6488c78f-51ca-46ed-95b2-98f90e1a0805",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Upbp3z_Z_Anb",
+        "outputId": "63783dde-a67d-46f2-de5d-9860370c3074"
       },
       "source": [
         "y_test"
       ],
-      "execution_count": 37,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1786,7 +1793,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 52
         }
       ]
     },
@@ -1827,18 +1834,18 @@
         "      plt.legend();\n",
         "                    "
       ],
-      "execution_count": 43,
+      "execution_count": 53,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JbuwM6voAmuP",
-        "outputId": "f8302324-fdb6-421c-be81-e85474172722",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
-        }
+        },
+        "id": "JbuwM6voAmuP",
+        "outputId": "a05e76b2-d256-48c4-d301-df3fb7c00cea"
       },
       "source": [
         "plot_predictions(train_data=X_train, \n",
@@ -1847,7 +1854,7 @@
         "                 test_labels = y_test,\n",
         "                 predictions = y_pred)"
       ],
-      "execution_count": 45,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1870,19 +1877,112 @@
         "id": "OPVIoHj6BSYC"
       },
       "source": [
-        "### Evaluating our model's predictions with regression evaluation metrics"
+        "### Evaluating our model's predictions with regression evaluation metrics\n",
+        "\n",
+        "Depending on the problem you're working on, there will be different evaluation metrics to evaluate your model's performance.\n",
+        "\n",
+        "Since we're working on a regression, two of the main metrics :\n",
+        "* MAE - mean absolute error, \"on average , how wrong is each of my model's predictions\"\n",
+        "* MSE - mean square error, \"square the average errors\"\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uHHluMz-BbBN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uHHluMz-BbBN",
+        "outputId": "b9d4fdcc-6387-4b63-c359-ef0222131464"
       },
       "source": [
-        ""
+        "# Evaluate the model on the test set\n",
+        "\n",
+        "model.evaluate(X_test, y_test)\n",
+        "#Return loss & metrics value  (loss = tf.keras.losses.mae, metrics=[\"mae\"])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1/1 [==============================] - 0s 16ms/step - loss: 3.1969 - mae: 3.1969\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3.196946620941162, 3.196946620941162]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wDSijLsYHpcc",
+        "outputId": "a89f3517-0659-4f98-cee8-4ad271df2047",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate the mean absolute error (mae)\n",
+        "\n",
+        "np.subtract(y_test, y_pred)\n",
+        "\n"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ -0.55219269,   3.44780731,   7.44780731,  11.44780731,\n",
+              "         15.44780731,  19.44780731,  23.44780731,  27.44780731,\n",
+              "         31.44780731,  35.44780731],\n",
+              "       [ -5.13991547,  -1.13991547,   2.86008453,   6.86008453,\n",
+              "         10.86008453,  14.86008453,  18.86008453,  22.86008453,\n",
+              "         26.86008453,  30.86008453],\n",
+              "       [ -9.72763824,  -5.72763824,  -1.72763824,   2.27236176,\n",
+              "          6.27236176,  10.27236176,  14.27236176,  18.27236176,\n",
+              "         22.27236176,  26.27236176],\n",
+              "       [-14.31536102, -10.31536102,  -6.31536102,  -2.31536102,\n",
+              "          1.68463898,   5.68463898,   9.68463898,  13.68463898,\n",
+              "         17.68463898,  21.68463898],\n",
+              "       [-18.9030838 , -14.9030838 , -10.9030838 ,  -6.9030838 ,\n",
+              "         -2.9030838 ,   1.0969162 ,   5.0969162 ,   9.0969162 ,\n",
+              "         13.0969162 ,  17.0969162 ],\n",
+              "       [-23.49080658, -19.49080658, -15.49080658, -11.49080658,\n",
+              "         -7.49080658,  -3.49080658,   0.50919342,   4.50919342,\n",
+              "          8.50919342,  12.50919342],\n",
+              "       [-28.07852936, -24.07852936, -20.07852936, -16.07852936,\n",
+              "        -12.07852936,  -8.07852936,  -4.07852936,  -0.07852936,\n",
+              "          3.92147064,   7.92147064],\n",
+              "       [-32.66625977, -28.66625977, -24.66625977, -20.66625977,\n",
+              "        -16.66625977, -12.66625977,  -8.66625977,  -4.66625977,\n",
+              "         -0.66625977,   3.33374023],\n",
+              "       [-37.25397491, -33.25397491, -29.25397491, -25.25397491,\n",
+              "        -21.25397491, -17.25397491, -13.25397491,  -9.25397491,\n",
+              "         -5.25397491,  -1.25397491],\n",
+              "       [-41.84170532, -37.84170532, -33.84170532, -29.84170532,\n",
+              "        -25.84170532, -21.84170532, -17.84170532, -13.84170532,\n",
+              "         -9.84170532,  -5.84170532]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 81
+        }
+      ]
     }
   ]
 }
