52. Evaluating a TensorFlow regression model part 7 (mean square error)

--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -1961,12 +1961,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SE8iEvzFLwet",
-        "outputId": "7d16f578-86da-4942-9718-48c2eb5c5a51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "id": "SE8iEvzFLwet",
+        "outputId": "7d16f578-86da-4942-9718-48c2eb5c5a51"
       },
       "source": [
         "tf.constant(y_pred)"
@@ -1995,11 +1995,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cA_4MJibNBYl",
-        "outputId": "982e059d-a2e5-4399-eb4f-4f513100d779",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cA_4MJibNBYl",
+        "outputId": "982e059d-a2e5-4399-eb4f-4f513100d779"
       },
       "source": [
         "y_test"
@@ -2023,11 +2023,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1iORJgjrM-Jc",
-        "outputId": "47084d9a-44f5-4e6f-fdad-fa91943e1be8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1iORJgjrM-Jc",
+        "outputId": "47084d9a-44f5-4e6f-fdad-fa91943e1be8"
       },
       "source": [
         "tf.squeeze(y_pred)"
@@ -2054,11 +2054,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kdMX_6hZNC_C",
-        "outputId": "7fc8362a-f159-42d6-abe0-d046895211b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kdMX_6hZNC_C",
+        "outputId": "7fc8362a-f159-42d6-abe0-d046895211b0"
       },
       "source": [
         "# Calculate mean absolute error\n",
@@ -2083,6 +2083,48 @@
           "execution_count": 90
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tAtl9ae1NqhL",
+        "outputId": "c872dafc-a62f-4e4f-c0de-c114b79f7135",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate mean squared error\n",
+        "mse = tf.metrics.mean_squared_error(y_true = y_test,\n",
+        "                                    y_pred = tf.squeeze(y_pred))\n",
+        "mse"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=float32, numpy=13.070175>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SJ7ivByzN4ne"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
