--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -2087,11 +2087,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tAtl9ae1NqhL",
-        "outputId": "c872dafc-a62f-4e4f-c0de-c114b79f7135",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tAtl9ae1NqhL",
+        "outputId": "c872dafc-a62f-4e4f-c0de-c114b79f7135"
       },
       "source": [
         "# Calculate mean squared error\n",
@@ -2121,9 +2121,17 @@
         "id": "SJ7ivByzN4ne"
       },
       "source": [
-        ""
+        "# Make some functions to reuse MAE and MSE\n",
+        "\n",
+        "def mae(y_true, y_pred) :\n",
+        "  tf.metrics.mean_absolute_error(y_true = y_true,\n",
+        "                                 y_pred = y_pred)\n",
+        "  \n",
+        "def mse(y_true, y_pred) :\n",
+        "  tf.metrics.mean_squared_error(y_true = y_true,\n",
+        "                                 y_pred = y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 92,
       "outputs": []
     }
   ]
