--- a/02_neural_network_classification_with_tensorflow.ipynb
+++ b/02_neural_network_classification_with_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_neural_network_classification_with_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAHVc8u5xREi1fRHmpjYs1",
+      "authorship_tag": "ABX9TyNihUjmjSa8Tb6sEtivgKEa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,19 @@
         "id": "-8fbclEDHYdu"
       },
       "source": [
-        "001"
+        "#### Neural Network Classification with TensorFlow"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jFEckTKEVNse"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
